# C-and-C-

./: README.md
XBBSDIFF/app/: build.gradle
XBBSDIFF/app/src/main/: AndroidManifest.xml
XBBSDIFF/app/src/main/res/values/: strings.xml
XBBSDIFF/gradle/wrapper/: gradle-wrapper.properties
XBFfmpeg/app/: build.gradle
XBFfmpeg/app/src/main/: AndroidManifest.xml
XBFfmpeg/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  XBFFmpeg.cpp  XBFFmpeg.h  macro.h  native-lib.cpp
XBFfmpeg/gradle/wrapper/: gradle-wrapper.properties
XBGIF/: readme.md
XBGIF/app/: build.gradle
XBGIF/app/src/main/: AndroidManifest.xml
XBGIF/app/src/main/cpp/: CMakeLists.txt  dgif_lib.c  gif_lib.h  gif_lib_private.h  gifalloc.c  native-lib.cpp
XBGIF/gradle/wrapper/: gradle-wrapper.properties
XBJNI/app/: build.gradle
XBJNI/app/src/main/: AndroidManifest.xml
XBJNI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
XBJNI/gradle/wrapper/: gradle-wrapper.properties
XBOpenCV/: CMakeLists.txt  XBOpenCV.cpp  XBOpenCV.h
XBOpenCV/c++/: a.out  cxx1.cpp  cxx_caculate.cpp
XBOpencv2/: settings.gradle
XBOpencv2/app/: build.gradle
XBOpencv2/app/src/main/: AndroidManifest.xml
XBOpencv2/app/src/main/cpp/: native-lib.cpp
XBOpencv2/gradle/wrapper/: gradle-wrapper.properties
opencv/: settings.gradle
opencv/app/: build.gradle
opencv/app/src/main/: AndroidManifest.xml
opencv/app/src/main/cpp/: native-lib.cpp
opencv/gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
